@@ -6,7 +6,6 @@ features for next releases:
 		- custom groups
 		- per-section permissions for groups;
 		- cron update DNS resolving;
-		- Collapsed switch list;
 		
 	
 	- Requests
