@@ -11,6 +11,8 @@
 	+ Show Subnet name instead of subnet IP address option;
 	+ Strict mode option in config files that controlls overlapping checks;
 	+ VLAN creation from adding/editing subnets;
+	+ IP addresses can now be edited;
+	+ Collapsed switch list;
 
 	Bugfixes:
 	------------------------
